@@ -114,6 +114,7 @@ Improvements:
    * Ctxpopup is now supporting focus_direction.
    * Don't try to pop the naviframe item multiple times.
    * Support language change for widget items (Ctxpopup, Hoversel, Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup, MultibuttonEntry)
+   * Move cursor when mouse moves with longpress.
 
 Fixes:
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
